2011-01-19  Alexey Proskuryakov  <ap@apple.com>

        Reviewed by Darin Adler.

        https://bugs.webkit.org/show_bug.cgi?id=52739
        Make it possible for a WebKit2 client to print headers and footers

        Added dummy implementations for new printing UIClient calls.

        * MiniBrowser/mac/BrowserWindowController.m:
        (-[BrowserWindowController awakeFromNib]):
        * WebKitTestRunner/TestController.cpp:
        (WTR::createOtherPage):
        (WTR::TestController::initialize):

2011-01-19  Dirk Pranke  <dpranke@chromium.org>

        Reviewed by Ojan Vafai.

        Change webkitpy/layout_tests/port/test.py to use the
        in-memory filesystem for cleaner unit testing. This
        change allows us to kill a lot of code that was
        specific to the test port, at the cost of being a
        little less clear about how things would work if
        you didn't have a filesystem.

        https://bugs.webkit.org/show_bug.cgi?id=52605

        * Scripts/webkitpy/layout_tests/port/test.py:

2011-01-19  Dirk Pranke  <dpranke@chromium.org>

        Unreviewed, build fix.

        Fix test failure caused by committing attachment 79368 instead
        of attachment 79461 on bug 52604.

        * Scripts/webkitpy/common/system/filesystem_mock.py:

2011-01-19  Dirk Pranke  <dpranke@chromium.org>

        Reviewed by Mihai Parparita.

        new-run-webkit-tests: remove use of os.walk, use mock filesystem for better
        unit testing. os.walk() is too much of a hassle to implement on
        top of the in-memory mock filesystem and adding the necessary
        interface to files_under() gives clients a cleaner API anyway
        (for this particular usage model).

        https://bugs.webkit.org/show_bug.cgi?id=52691

        * Scripts/webkitpy/common/system/filesystem.py:
        * Scripts/webkitpy/common/system/filesystem_mock.py:
        * Scripts/webkitpy/layout_tests/port/test_files.py: