@@ -1,3 +1,13 @@
+2011-01-19  Maciej Stachowiak  <mjs@apple.com>
+
+        Reviewed by Anders Carlsson.
+
+        If resetting between tests times out, treat it as a WebProcess crash
+        https://bugs.webkit.org/show_bug.cgi?id=52757
+
+        * WebKitTestRunner/TestController.cpp:
+        (WTR::TestController::runTest):
+
 2011-01-19  Alexey Proskuryakov  <ap@apple.com>
 
         Reviewed by Darin Adler.
